// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary correctly when 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $30.00
     
  </h1>
</div>
`;

exports[`should render ExpensesSummary correctly when more than 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    2
     
    expenses
     totalling 
    $30.00
     
  </h1>
</div>
`;
